# CMakeTest

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeTestConfig.h.in  README.md
MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
Source/: main.cpp
